[gd_scene load_steps=22 format=3 uid="uid://8hxumwg0h8tn"]

[ext_resource type="Script" path="res://scenes/game_object/ghost_enemy/ghost_enemy.gd" id="1_7ujgh"]
[ext_resource type="Texture2D" uid="uid://c7fubbj56yb33" path="res://scenes/game_object/ghost_enemy/ghost_enemy.png" id="1_fu3wo"]
[ext_resource type="Script" path="res://scenes/component/health_component.gd" id="1_o7ju1"]
[ext_resource type="PackedScene" uid="uid://7s301u7tjium" path="res://scenes/component/death_component.tscn" id="2_5kvwl"]
[ext_resource type="PackedScene" uid="uid://7qy28g6j83wx" path="res://scenes/component/vial_drop_component.tscn" id="2_xa6w2"]
[ext_resource type="PackedScene" uid="uid://sa61c1u7xiwq" path="res://scenes/component/hurtbox_component.tscn" id="3_wwevo"]
[ext_resource type="PackedScene" uid="uid://c2lfbqutk3ttf" path="res://scenes/component/hit_flash_component.tscn" id="6_3cyuf"]
[ext_resource type="Shader" path="res://scenes/component/hit_flash_component.gdshader" id="6_8n24t"]
[ext_resource type="PackedScene" uid="uid://dbjimt881h6su" path="res://scenes/component/velocity_component.tscn" id="7_74w3s"]
[ext_resource type="PackedScene" uid="uid://5hrpbv6e1dnw" path="res://scenes/component/random_stream_player_2d_component.tscn" id="10_piai3"]
[ext_resource type="AudioStream" uid="uid://bhvyf2tjao1yg" path="res://assets/audio/footstep_carpet_000.ogg" id="11_smyyq"]
[ext_resource type="AudioStream" uid="uid://dwwa8qrafrakg" path="res://assets/audio/footstep_carpet_001.ogg" id="12_67rvb"]
[ext_resource type="AudioStream" uid="uid://ckdwnftojjug5" path="res://assets/audio/footstep_carpet_002.ogg" id="13_0rn4o"]
[ext_resource type="AudioStream" uid="uid://bxe1j1gsserk6" path="res://assets/audio/footstep_carpet_003.ogg" id="14_yys8d"]
[ext_resource type="AudioStream" uid="uid://cppe54inguvbe" path="res://assets/audio/footstep_carpet_004.ogg" id="15_oeyey"]

[sub_resource type="Animation" id="Animation_t54rg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -5)]
}

[sub_resource type="Animation" id="Animation_j623s"]
resource_name = "float"
length = 0.8
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.3, 0.5, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, -5), Vector2(0, -8), Vector2(0, -8), Vector2(0, -5)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sqv1o"]
_data = {
"RESET": SubResource("Animation_t54rg"),
"float": SubResource("Animation_j623s")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_li02i"]
resource_local_to_scene = true
shader = ExtResource("6_8n24t")
shader_parameter/lerp_percent = 0.0

[sub_resource type="CircleShape2D" id="CircleShape2D_gapbj"]
radius = 11.0

[sub_resource type="CircleShape2D" id="CircleShape2D_xu1t8"]
radius = 4.0

[node name="GhostEnemy" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 8
collision_mask = 9
script = ExtResource("1_7ujgh")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_sqv1o")
}
autoplay = "float"

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("1_o7ju1")
max_health = 50.0

[node name="VelocityComponent" parent="." instance=ExtResource("7_74w3s")]
max_speed = 30
acceleration = 2

[node name="VialDropComponent" parent="." node_paths=PackedStringArray("healthComponent") instance=ExtResource("2_xa6w2")]
drop_percent = 0.8
healthComponent = NodePath("../HealthComponent")

[node name="HitFlashComponent" parent="." node_paths=PackedStringArray("health_component", "sprite") instance=ExtResource("6_3cyuf")]
health_component = NodePath("../HealthComponent")
sprite = NodePath("../Visuals/Sprite2D")
hit_flash_material = SubResource("ShaderMaterial_li02i")

[node name="DeathComponent" parent="." node_paths=PackedStringArray("health_component", "sprite") instance=ExtResource("2_5kvwl")]
health_component = NodePath("../HealthComponent")
sprite = NodePath("../Visuals/Sprite2D")

[node name="HurtboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("3_wwevo")]
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
position = Vector2(0, -4)
shape = SubResource("CircleShape2D_gapbj")

[node name="Visuals" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Visuals"]
position = Vector2(0, -5)
texture = ExtResource("1_fu3wo")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -3)
shape = SubResource("CircleShape2D_xu1t8")

[node name="HitRandomStreamPlayer2DComponent" parent="." instance=ExtResource("10_piai3")]
process_mode = 3
streams = Array[AudioStream]([ExtResource("11_smyyq"), ExtResource("12_67rvb"), ExtResource("13_0rn4o"), ExtResource("14_yys8d"), ExtResource("15_oeyey")])
